--- a/ass/css/style.css
+++ b/ass/css/style.css
@@ -27,10 +27,13 @@
 }
 
 #team-tactic{
+    display: grid;
     background-repeat: no-repeat;
     background-image:url(../img/199917.jpg);
-    background-size:cover;
+    background-size:contain;
     background-position:center;
+    height: 800px;
+    width: 700px;
 }
 
 #players{
@@ -39,6 +42,8 @@
     grid-template-rows: repeat(9, 2fr);
     grid-column-gap: 10px;
     grid-row-gap: 10px;
+    align-items: center;
+    justify-items: center;
 }
 
 #player1 { 
@@ -47,6 +52,8 @@
     background-image:url(../img/placeholder-card-normal.webp);
     background-size:contain;
     background-position:center;
+    width: 60px;
+    height: 80px;
 }
 
 #player2 {
@@ -55,6 +62,8 @@
     background-image:url(../img/placeholder-card-normal.webp);
     background-size:contain;
     background-position:center;
+    width: 60px;
+    height: 80px;
 }
 
 #player3 {
@@ -63,6 +72,8 @@
     background-image:url(../img/placeholder-card-normal.webp);
     background-size:contain;
     background-position:center;
+    width: 60px;
+    height: 80px;
 }
 
 #player4 {
@@ -71,6 +82,8 @@
     background-image:url(../img/placeholder-card-normal.webp);
     background-size:contain;
     background-position:center;
+    width: 60px;
+    height: 80px;
 }
 
 #player5 { 
@@ -79,6 +92,8 @@
     background-image:url(../img/placeholder-card-normal.webp);
     background-size:contain;
     background-position:center;
+    width: 60px;
+    height: 80px;
 }
 
 #player6 { 
@@ -87,6 +102,8 @@
     background-image:url(../img/placeholder-card-normal.webp);
     background-size:contain;
     background-position:center;
+    width: 60px;
+    height: 80px;
 }
 
 #player7 { 
@@ -95,6 +112,8 @@
     background-image:url(../img/placeholder-card-normal.webp);
     background-size:contain;
     background-position:center;
+    width: 60px;
+    height: 80px;
 }
 
 #player8 {
@@ -103,6 +122,8 @@
     background-image:url(../img/placeholder-card-normal.webp);
     background-size:contain;
     background-position:center;
+    width: 60px;
+    height: 80px;
 }
 
 #player9 {
@@ -111,6 +132,8 @@
     background-image:url(../img/placeholder-card-normal.webp);
     background-size:contain;
     background-position:center;
+    width: 60px;
+    height: 80px;
 }
 
 #player10 {
@@ -119,6 +142,8 @@
     background-image:url(../img/placeholder-card-normal.webp);
     background-size:contain;
     background-position:center;
+    width: 60px;
+    height: 80px;
 }
 
 #player11 { 
@@ -127,6 +152,8 @@
     background-image:url(../img/placeholder-card-normal.webp);
     background-size:contain;
     background-position:center;
+    width: 60px;
+    height: 80px;
 }
 #player1 img { 
     width: 60px;
