--- a/ass/css/style.css
+++ b/ass/css/style.css
@@ -29,11 +29,12 @@
 #team-tactic{
     display: grid;
     background-repeat: no-repeat;
-    background-image:url(../img/199917.jpg);
-    background-size:contain;
+    background-image:url(../img/tiran.webp);
+    background-size:cover;
     background-position:center;
-    height: 800px;
-    width: 700px;
+    height: 855px;
+    width: 620px;
+
 }
 
 #players{
