--- a/ass/css/style.css
+++ b/ass/css/style.css
@@ -281,54 +281,128 @@
      grid-template-rows: repeat(2, 1fr);
      position: absolute;
     }
-    #content-img{
+    /* #content-img{
         grid-area: 1 / 1 / 2 / 2; 
     }
     #content-name p{
         grid-area: 2 / 1 / 3 / 3; 
-    }
-    /* #player12 { 
-        grid-area: 9 / 4 / 10 / 5;
+    } */
+  #player12 { 
+    background-repeat: no-repeat;
+    background-image:url(../img/placeholder-card-normal.webp);
+    background-size:contain;
+    background-position:center;
+    width: 60px;
+    height: 80px;
     }
 #player13 {
-    grid-area: 7 / 5 / 8 / 6; 
-}
+    background-repeat: no-repeat;
+    background-image:url(../img/placeholder-card-normal.webp);
+    background-size:contain;
+    background-position:center;
+    width: 60px;
+    height: 80px;}
 
 #player14 {
-    grid-area: 7 / 7 / 8 / 8;
-}
+    background-repeat: no-repeat;
+    background-image:url(../img/placeholder-card-normal.webp);
+    background-size:contain;
+    background-position:center;
+    width: 60px;
+    height: 80px;}
 
 #player15 {
-    grid-area: 7 / 3 / 8 / 4; 
-}
+    background-repeat: no-repeat;
+    background-image:url(../img/placeholder-card-normal.webp);
+    background-size:contain;
+    background-position:center;
+    width: 60px;
+    height: 80px;}
 
 #player16 { 
-    grid-area: 7 / 1 / 8 / 2; 
-}
+    background-repeat: no-repeat;
+    background-image:url(../img/placeholder-card-normal.webp);
+    background-size:contain;
+    background-position:center;
+    width: 60px;
+    height: 80px;}
 
 #player17 { 
-    grid-area: 4 / 1 / 6 / 2; 
-}
+    background-repeat: no-repeat;
+    background-image:url(../img/placeholder-card-normal.webp);
+    background-size:contain;
+    background-position:center;
+    width: 60px;
+    height: 80px;}
 
 #player18 { 
-    grid-area: 4 / 3 / 6 / 4; 
-}
+    background-repeat: no-repeat;
+    background-image:url(../img/placeholder-card-normal.webp);
+    background-size:contain;
+    background-position:center;
+    width: 60px;
+    height: 80px;}
 
 #player19 {
-    grid-area: 4 / 5 / 6 / 6; 
-}
+    background-repeat: no-repeat;
+    background-image:url(../img/placeholder-card-normal.webp);
+    background-size:contain;
+    background-position:center;
+    width: 60px;
+    height: 80px;}
 
 #player20 {
-    grid-area: 4 / 7 / 6 / 8;
-}
+    background-repeat: no-repeat;
+    background-image:url(../img/placeholder-card-normal.webp);
+    background-size:contain;
+    background-position:center;
+    width: 60px;
+    height: 80px;}
 
 #player21 {
-    grid-area: 2 / 3 / 4 / 4; 
-}
+    background-repeat: no-repeat;
+    background-image:url(../img/placeholder-card-normal.webp);
+    background-size:contain;
+    background-position:center;
+    width: 60px;
+    height: 80px;}
 
 #player22 { 
-    grid-area: 2 / 5 / 4 / 6; 
-} */
+    background-repeat: no-repeat;
+    background-image:url(../img/placeholder-card-normal.webp);
+    background-size:contain;
+    background-position:center;
+    width: 60px;
+    height: 80px;} 
+    #player23 { 
+        background-repeat: no-repeat;
+        background-image:url(../img/placeholder-card-normal.webp);
+        background-size:contain;
+        background-position:center;
+        width: 60px;
+        height: 80px;} 
+        #player24 { 
+            background-repeat: no-repeat;
+            background-image:url(../img/placeholder-card-normal.webp);
+            background-size:contain;
+            background-position:center;
+            width: 60px;
+            height: 80px;} 
+            #player25 { 
+                background-repeat: no-repeat;
+                background-image:url(../img/placeholder-card-normal.webp);
+                background-size:contain;
+                background-position:center;
+                width: 60px;
+                height: 80px;} 
+                #player26 { 
+                    background-repeat: no-repeat;
+                    background-image:url(../img/placeholder-card-normal.webp);
+                    background-size:contain;
+                    background-position:center;
+                    width: 60px;
+                    height: 80px;
+                } 
 #footer{
     background: blue;
     height: 80px;
@@ -357,4 +431,42 @@
         flex:1 ;
     }
 
+}
+
+.player-card {
+    /* border: 1px solid #ccc; */
+    border-radius: 10px;
+    padding: 10px;
+    margin: 10px;
+    text-align: center;
+    width: 50px;
+    height: auto;
+    /* background-color: #f9f9f9; */
+    background-repeat: no-repeat;
+    background-image:url(../img/placeholder-card-normal.webp);
+    background-size:contain;
+    background-position:center;
+    width: auto;
+    height: auto;
+}
+.player-photo {
+    width: 35px;
+    height: auto;
+    border-radius: 50%;
+    padding: 0;
+    margin: 0;
+
+
+}
+.club-logo {
+    width: 10px;
+    height: auto;
+    margin-left: 5px;
+}
+.player-card p{
+    font-size: 7px;
+    padding: 2px;
+    margin: 1px;
+    color: rgb(0, 255, 26);
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
