--- a/ass/css/style.css
+++ b/ass/css/style.css
@@ -1,68 +1,72 @@
-#body{
+#body {
     display: flex;
     flex-flow: row wrap;
     text-align: center;
+    background:rgb(0, 0, 0);
+    background-position: center;
+    background-size: cover;
 }
 
-#body>*{
+#body>* {
     padding: 10px;
     margin: 10px;
     flex: 1 100%;
-    
+
 }
 
 
-#team-logo img{
-    position:absolute;
+#team-logo img {
+    position: absolute;
     left: 0;
     top: 0;
-    width: 50px;
-    margin: 10px;
+    width: 60px;
+    margin: 0px;
+    background: green;
 }
-#team-name marquee{
+
+#team-name marquee {
     position: absolute;
     left: 60px;
     top: 0px;
-    font-size:x-large;
+    font-size: x-large;
 }
 
-#team-tactic{
+#team-tactic {
     display: grid;
     background-repeat: no-repeat;
-    background-image:url(../img/tiran.webp);
-    background-size:cover;
-    background-position:center;
+    background-image: url(../img/tiran.webp);
+    background-size: cover;
+    background-position: center;
     height: 855px;
     width: 620px;
-
 }
 
-#players{
+#players {
     display: grid;
-    grid-template-columns: repeat(7, 2fr);
-    grid-template-rows: repeat(9, 2fr);
+    grid-template-columns: repeat(7, 1fr);
+    grid-template-rows: repeat(9, 1fr);
     grid-column-gap: 10px;
     grid-row-gap: 10px;
     align-items: center;
     justify-items: center;
 }
 
-#player1 { 
+#player1 {
     grid-area: 9 / 4 / 10 / 5;
     background-repeat: no-repeat;
-    background-image:url(../img/placeholder-card-normal.webp);
-    background-size:contain;
-    background-position:center;
+    background-image: url(../img/placeholder-card-normal.webp);
+    background-size: contain;
+    background-position: center;
     width: 60px;
     height: 80px;
 }
 
 #player2 {
-    grid-area: 7 / 5 / 8 / 6; 
+    grid-area: 7 / 5 / 8 / 6;
     background-repeat: no-repeat;
-    background-image:url(../img/placeholder-card-normal.webp);
-    background-size:contain;
-    background-position:center;
+    background-image: url(../img/placeholder-card-normal.webp);
+    background-size: contain;
+    background-position: center;
     width: 60px;
     height: 80px;
 }
@@ -70,59 +74,59 @@
 #player3 {
     grid-area: 7 / 7 / 8 / 8;
     background-repeat: no-repeat;
-    background-image:url(../img/placeholder-card-normal.webp);
-    background-size:contain;
-    background-position:center;
+    background-image: url(../img/placeholder-card-normal.webp);
+    background-size: contain;
+    background-position: center;
     width: 60px;
     height: 80px;
 }
 
 #player4 {
-    grid-area: 7 / 3 / 8 / 4; 
+    grid-area: 7 / 3 / 8 / 4;
     background-repeat: no-repeat;
-    background-image:url(../img/placeholder-card-normal.webp);
-    background-size:contain;
-    background-position:center;
+    background-image: url(../img/placeholder-card-normal.webp);
+    background-size: contain;
+    background-position: center;
     width: 60px;
     height: 80px;
 }
 
-#player5 { 
-    grid-area: 7 / 1 / 8 / 2; 
+#player5 {
+    grid-area: 7 / 1 / 8 / 2;
     background-repeat: no-repeat;
-    background-image:url(../img/placeholder-card-normal.webp);
-    background-size:contain;
-    background-position:center;
+    background-image: url(../img/placeholder-card-normal.webp);
+    background-size: contain;
+    background-position: center;
     width: 60px;
     height: 80px;
 }
 
-#player6 { 
-    grid-area: 4 / 1 / 6 / 2; 
+#player6 {
+    grid-area: 4 / 1 / 6 / 2;
     background-repeat: no-repeat;
-    background-image:url(../img/placeholder-card-normal.webp);
-    background-size:contain;
-    background-position:center;
+    background-image: url(../img/placeholder-card-normal.webp);
+    background-size: contain;
+    background-position: center;
     width: 60px;
     height: 80px;
 }
 
-#player7 { 
-    grid-area: 4 / 3 / 6 / 4; 
+#player7 {
+    grid-area: 4 / 3 / 6 / 4;
     background-repeat: no-repeat;
-    background-image:url(../img/placeholder-card-normal.webp);
-    background-size:contain;
-    background-position:center;
+    background-image: url(../img/placeholder-card-normal.webp);
+    background-size: contain;
+    background-position: center;
     width: 60px;
     height: 80px;
 }
 
 #player8 {
-    grid-area: 4 / 5 / 6 / 6; 
+    grid-area: 4 / 5 / 6 / 6;
     background-repeat: no-repeat;
-    background-image:url(../img/placeholder-card-normal.webp);
-    background-size:contain;
-    background-position:center;
+    background-image: url(../img/placeholder-card-normal.webp);
+    background-size: contain;
+    background-position: center;
     width: 60px;
     height: 80px;
 }
@@ -130,334 +134,241 @@
 #player9 {
     grid-area: 4 / 7 / 6 / 8;
     background-repeat: no-repeat;
-    background-image:url(../img/placeholder-card-normal.webp);
-    background-size:contain;
-    background-position:center;
+    background-image: url(../img/placeholder-card-normal.webp);
+    background-size: contain;
+    background-position: center;
     width: 60px;
     height: 80px;
 }
 
 #player10 {
-    grid-area: 2 / 3 / 4 / 4; 
+    grid-area: 2 / 3 / 4 / 4;
     background-repeat: no-repeat;
-    background-image:url(../img/placeholder-card-normal.webp);
-    background-size:contain;
-    background-position:center;
+    background-image: url(../img/placeholder-card-normal.webp);
+    background-size: contain;
+    background-position: center;
     width: 60px;
     height: 80px;
 }
 
-#player11 { 
-    grid-area: 2 / 5 / 4 / 6; 
+#player11 {
+    grid-area: 2 / 5 / 4 / 6;
     background-repeat: no-repeat;
-    background-image:url(../img/placeholder-card-normal.webp);
-    background-size:contain;
-    background-position:center;
-    width: 60px;
-    height: 80px;
-}
-#player1 img { 
-    width: 60px;
-    height: 80px;
-
-}
-#player2 img { 
-    width: 60px;
-    height: 80px;
-}
-#player3 img { 
-    width: 60px;
-    height: 80px;
-}
-#player4 img { 
-    width: 60px;
-    height: 80px;
-}
-#player5 img { 
-    width: 60px;
-    height: 80px;
-}
-#player6 img { 
-    width: 60px;
-    height: 80px;
-}
-#player7 img { 
-    width: 60px;
-    height: 80px;
-}
-#player8 img { 
-    width: 60px;
-    height: 80px;
-}
-#player9 img { 
-    width: 60px;
-    height: 80px;
-}
-#player10 img { 
-    width: 60px;
-    height: 80px;
-}
-#player11 img { 
-    width: 60px;
-    height: 80px;
-}
-#player12 img { 
-    width: 60px;
-    height: 80px;
-}
-#player13 img { 
-    width: 60px;
-    height: 80px;
-}
-#player14 img { 
-    width: 60px;
-    height: 80px;
-}
-#player15 img { 
-    width: 60px;
-    height: 80px;
-}
-#player16 img { 
-    width: 60px;
-    height: 80px;
-}
-#player17 img { 
-    width: 60px;
-    height: 80px;
-}
-#player18 img { 
-    width: 60px;
-    height: 80px;
-}
-#player19 img { 
-    width: 60px;
-    height: 80px;
-}
-#player20 img { 
-    width: 60px;
-    height: 80px;
-}
-#player22 img { 
-    width: 60px;
-    height: 80px;
-}
-#player21 img { 
-    width: 60px;
-    height: 80px;
-}
-#player23 img { 
-    width: 60px;
-    height: 80px;
-}
-#player24 img { 
-    width: 60px;
-    height: 80px;
-}
-#player25 img { 
-    width: 60px;
-    height: 80px;
-}
-#player26 img { 
+    background-image: url(../img/placeholder-card-normal.webp);
+    background-size: contain;
+    background-position: center;
     width: 60px;
     height: 80px;
 }
 
+#player1 img {
+    width: 60px;
+    height: 80px;
 
-#aside{
-    background: rgba(7, 101, 21, 0.642);
+}
+
+#aside {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(5, 1fr);
     grid-column-gap: 10px;
     grid-row-gap: 10px;
-    }
-    #player12 {
+    position: relative;
+}
 
-     position: relative;
-    }
-#content{
-     display: grid;
-     grid-template-columns: repeat(2, 1fr);
-     grid-template-rows: repeat(2, 1fr);
-     position: absolute;
-    }
-    /* #content-img{
-        grid-area: 1 / 1 / 2 / 2; 
-    }
-    #content-name p{
-        grid-area: 2 / 1 / 3 / 3; 
-    } */
-  #player12 { 
+#content {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    position: absolute;
+}
+
+#player12 {
     background-repeat: no-repeat;
-    background-image:url(../img/placeholder-card-normal.webp);
-    background-size:contain;
-    background-position:center;
+    background-image: url(../img/placeholder-card-normal.webp);
+    background-size: contain;
+    background-position: center;
     width: 60px;
     height: 80px;
-    }
+}
+
 #player13 {
     background-repeat: no-repeat;
-    background-image:url(../img/placeholder-card-normal.webp);
-    background-size:contain;
-    background-position:center;
+    background-image: url(../img/placeholder-card-normal.webp);
+    background-size: contain;
+    background-position: center;
     width: 60px;
-    height: 80px;}
+    height: 80px;
+}
 
 #player14 {
     background-repeat: no-repeat;
-    background-image:url(../img/placeholder-card-normal.webp);
-    background-size:contain;
-    background-position:center;
+    background-image: url(../img/placeholder-card-normal.webp);
+    background-size: contain;
+    background-position: center;
     width: 60px;
-    height: 80px;}
+    height: 80px;
+}
 
 #player15 {
     background-repeat: no-repeat;
-    background-image:url(../img/placeholder-card-normal.webp);
-    background-size:contain;
-    background-position:center;
+    background-image: url(../img/placeholder-card-normal.webp);
+    background-size: contain;
+    background-position: center;
     width: 60px;
-    height: 80px;}
+    height: 80px;
+}
 
-#player16 { 
+#player16 {
     background-repeat: no-repeat;
-    background-image:url(../img/placeholder-card-normal.webp);
-    background-size:contain;
-    background-position:center;
+    background-image: url(../img/placeholder-card-normal.webp);
+    background-size: contain;
+    background-position: center;
     width: 60px;
-    height: 80px;}
+    height: 80px;
+}
 
-#player17 { 
+#player17 {
     background-repeat: no-repeat;
-    background-image:url(../img/placeholder-card-normal.webp);
-    background-size:contain;
-    background-position:center;
+    background-image: url(../img/placeholder-card-normal.webp);
+    background-size: contain;
+    background-position: center;
     width: 60px;
-    height: 80px;}
+    height: 80px;
+}
 
-#player18 { 
+#player18 {
     background-repeat: no-repeat;
-    background-image:url(../img/placeholder-card-normal.webp);
-    background-size:contain;
-    background-position:center;
+    background-image: url(../img/placeholder-card-normal.webp);
+    background-size: contain;
+    background-position: center;
     width: 60px;
-    height: 80px;}
+    height: 80px;
+}
 
 #player19 {
     background-repeat: no-repeat;
-    background-image:url(../img/placeholder-card-normal.webp);
-    background-size:contain;
-    background-position:center;
+    background-image: url(../img/placeholder-card-normal.webp);
+    background-size: contain;
+    background-position: center;
     width: 60px;
-    height: 80px;}
+    height: 80px;
+}
 
 #player20 {
     background-repeat: no-repeat;
-    background-image:url(../img/placeholder-card-normal.webp);
-    background-size:contain;
-    background-position:center;
+    background-image: url(../img/placeholder-card-normal.webp);
+    background-size: contain;
+    background-position: center;
     width: 60px;
-    height: 80px;}
+    height: 80px;
+}
 
 #player21 {
     background-repeat: no-repeat;
-    background-image:url(../img/placeholder-card-normal.webp);
-    background-size:contain;
-    background-position:center;
+    background-image: url(../img/placeholder-card-normal.webp);
+    background-size: contain;
+    background-position: center;
     width: 60px;
-    height: 80px;}
+    height: 80px;
+}
 
-#player22 { 
+#player22 {
     background-repeat: no-repeat;
-    background-image:url(../img/placeholder-card-normal.webp);
-    background-size:contain;
-    background-position:center;
+    background-image: url(../img/placeholder-card-normal.webp);
+    background-size: contain;
+    background-position: center;
     width: 60px;
-    height: 80px;} 
-    #player23 { 
-        background-repeat: no-repeat;
-        background-image:url(../img/placeholder-card-normal.webp);
-        background-size:contain;
-        background-position:center;
-        width: 60px;
-        height: 80px;} 
-        #player24 { 
-            background-repeat: no-repeat;
-            background-image:url(../img/placeholder-card-normal.webp);
-            background-size:contain;
-            background-position:center;
-            width: 60px;
-            height: 80px;} 
-            #player25 { 
-                background-repeat: no-repeat;
-                background-image:url(../img/placeholder-card-normal.webp);
-                background-size:contain;
-                background-position:center;
-                width: 60px;
-                height: 80px;} 
-                #player26 { 
-                    background-repeat: no-repeat;
-                    background-image:url(../img/placeholder-card-normal.webp);
-                    background-size:contain;
-                    background-position:center;
-                    width: 60px;
-                    height: 80px;
-                } 
-#footer{
+    height: 80px;
+}
+
+#player23 {
+    background-repeat: no-repeat;
+    background-image: url(../img/placeholder-card-normal.webp);
+    background-size: contain;
+    background-position: center;
+    width: 60px;
+    height: 80px;
+}
+
+#player24 {
+    background-repeat: no-repeat;
+    background-image: url(../img/placeholder-card-normal.webp);
+    background-size: contain;
+    background-position: center;
+    width: 60px;
+    height: 80px;
+}
+
+#player25 {
+    background-repeat: no-repeat;
+    background-image: url(../img/placeholder-card-normal.webp);
+    background-size: contain;
+    background-position: center;
+    width: 60px;
+    height: 80px;
+}
+
+#player26 {
+    background-repeat: no-repeat;
+    background-image: url(../img/placeholder-card-normal.webp);
+    background-size: contain;
+    background-position: center;
+    width: 60px;
+    height: 80px;
+}
+
+#footer {
     background: blue;
     height: 80px;
     font-size: 24px;
 }
-@media all and (min-width: 800px){
-    #main{
-        flex:3;
+
+@media all and (min-width: 800px) {
+    #main {
+        flex: 3;
     }
 
-    #aside{
+    #aside {
         order: 1;
     }
 
-    #main{
+    #main {
         order: 2;
     }
-    
-    #footer{
+
+    #footer {
         order: 4;
     }
 }
 
-@media all and (min-width: 600px){
-    #aside{
-        flex:1 ;
+@media all and (min-width: 600px) {
+    #aside {
+        flex: 1;
     }
 
 }
 
 .player-card {
     /* border: 1px solid #ccc; */
-    border-radius: 50px 1px;
+    /* border-radius: 50px 1px; */
     padding: 5px;
     margin: -2px;
     text-align: center;
     background-repeat: no-repeat;
-    background-image:url(../img/placeholder-card-normal.webp);
-    background-size:contain;
-    background-position:center;
+    background-image: url(../img/placeholder-card-normal.webp);
+    background-size: contain;
+    background-position: center;
     width: 70px;
     height: auto;
     cursor: move;
     box-shadow: 0 0 50px rgb(13, 255, 0),
-;    box-shadow: 0 0 5px rgb(13, 255, 0),
-0 0 25px rgb(255, 179, 0),
- 0 0 50px rgb(0, 255, 72),
-  0 0 10px rgb(9, 99, 10), 0 0 20px rgb(13, 255, 45);
+    ;
+  
 }
 
-.player-card:hover{
-    box-shadow: 0 0 5px rgb(255, 64, 0),
-    0 0 25px rgb(255, 179, 0),
-     0 0 50px rgb(255, 8, 0),
-      0 0 50px rgb(255, 179, 0), 0 0 20px rgb(255, 98, 0);
+.player-card:hover {
+    filter: drop-shadow(0 -2px 5px #06fc02) drop-shadow(0 8px 8px #06fc02);
 }
 
 .player-photo {
@@ -474,19 +385,18 @@
     margin-left: 5px;
 }
 
-.player-card p{
+.player-card p {
     font-size: 7px;
     padding: 2px;
     margin: 1px;
-    color: rgb(255, 255, 255);
+    color: rgb(17, 255, 0);
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-.popup{
-    background-color: rgb(139, 0, 0);
+.popup {
+    background-color: rgba(139, 0, 0, 0.667);
     height: 200px;
-    position: relative;
-    top: 50vh;
-    left: 50%;
+    position: absolute;
+    top: 0;
     display: none;
 }
