--- a/ass/css/style.css
+++ b/ass/css/style.css
@@ -392,11 +392,11 @@
     color: rgb(17, 255, 0);
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
-
+/* 
 .popup {
     background-color: rgba(139, 0, 0, 0.667);
     height: 200px;
     position: absolute;
     top: 0;
     display: none;
-}
+} */
