--- a/ass/css/style.css
+++ b/ass/css/style.css
@@ -384,6 +384,10 @@
     height: auto;
     margin-left: 5px;
 }
+.modal-backdrop {
+    display: none ;
+}
+
 
 .player-card p {
     font-size: 7px;
@@ -392,11 +396,3 @@
     color: rgb(17, 255, 0);
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
-/* 
-.popup {
-    background-color: rgba(139, 0, 0, 0.667);
-    height: 200px;
-    position: absolute;
-    top: 0;
-    display: none;
-} */
