--- a/ass/css/style.css
+++ b/ass/css/style.css
@@ -9,16 +9,8 @@
 }
 
 #body>* {
-    /* padding: 10px;
-    margin: 10px; */
     flex: 1 100%;
-
 }
-#aside2{
-
-}
-
-
 
 #team-name marquee {
     left: 0px;
@@ -30,9 +22,8 @@
 }
 
 #team-tactic {
-    display: grid;
     background-repeat: no-repeat;
-    background-image: url(../img/tiran.webp);
+    background-image: url(../img/Glory\ Glenn\ poster\ by\ Lundgren+Lindqvist.jpg);
     background-size: cover;
     background-position: center;
     height: 855px;
@@ -40,6 +31,7 @@
     margin: 10px;
     padding: 10px;
     border: #02cefc solid;
+    border-radius: 12px;
 }
 
 #players {
@@ -205,9 +197,6 @@
     height: 80px;
 }
 
-
-
-
 #aside {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -215,9 +204,10 @@
     grid-column-gap: 10px;
     grid-row-gap: 10px;
     position: relative;
-    background-image: url(../img/teamblue\ look.jpg);
+    background-image: url(../img/Blue\ Squares\ iPhone\ Wallpapers.jpg);
     margin: 10px;
     border: #02cefc solid;
+    border-radius: 10px;
 }
 
 #content {
@@ -263,36 +253,36 @@
         flex: 1;
     }
     #aside2{
-        flex:0.5
+        order:2;
+        flex:0.5;
     }
    
 
 }
 #aside2{
    display: flex;
-   border-radius: 5%;
    background: url(/ass/img/Blue\ Lock\ Collection.jpg);
    background-size:contain ;
    background-repeat: no-repeat;
+   border-radius: 12px;
+    border: solid #02cefc;
 }
 
 .player-card {
     padding: 5px;
     margin: -2px;
+    width: 90px;
     text-align: center;
     background-repeat: no-repeat;
     background-image: url(../img/placeholder-card-normal.webp);
     background-size: contain;
     background-position: center;
-    width: auto;
     height: auto;
-    cursor: move;
-    transition: .5s;   
-    position: relative;
+    cursor: move;       
 }
+
 .player-card:hover {
-    transform: rotateZ(200px);
-    filter: drop-shadow(0 -2px 5px #06fc02),(0 -2px 5px #06fc02);
+    filter: drop-shadow 0 -2px 5px #06fc02,0 -2px 5px #06fc02;
 }
 
 .player-photo {
@@ -308,6 +298,7 @@
     height: 10px;
     margin-left: 1px;
 }
+
 .club-logo img {
     width: 10px;
     height: 10px;
@@ -316,10 +307,19 @@
 .modal-backdrop {
     display: none ;
 }
+
 .player-card p {
     font-size: 7px;
     padding: 2px;
     margin: 1px;
     color: rgb(17, 255, 0);
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+#message{
+    height: auto;
+    width: auto;
+    color: rgb(4, 4, 6) !important ;
+    background: red;
+    border-radius: 12px;
 }
